<resources>
    <string name="app_name">ExampleService</string>
    <string name="start_background_service">Start Background Service</string>
    <string name="stop_background_service">Stop Background Service</string>
    <string name="channel_name">channel Name</string>
    <string name="text_description_notification">text description notification</string>
    <string name="stop_foreground_service">Stop Foreground service</string>
    <string name="start_foreground_service">Start Foreground service</string>
    <string name="example_background_service">Example Background service</string>
    <string name="example_foreground_service">example foreground service</string>
    <string name="example_bound_service">Example bound service</string>
    <string name="stop_bound_service">Stop bound service</string>
    <string name="start_bound_service">Start bound service</string>
    <string name="play_music">Play Music</string>
    <string name="stop_music">Stop music</string>
    <string name="example_play_music">Example Play Music</string>
</resources>